--- a/小程序模板/视频模板/videotemplate26/pages/index/index.css
+++ b/小程序模板/视频模板/videotemplate26/pages/index/index.css
@@ -333,14 +333,17 @@
 }
 .news_title{
     margin: 0.1rem 0 ;
-    color:rgb(47, 139, 226);
-    font-size: 0.16rem;
+    color:#fff;
+    font-size: 0.14rem;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    position: absolute;
+    bottom: 0;
+
 }
 .news_goods{
     display: flex;
