--- a/小程序模板/视频模板/videotemplate27/pages/index/index.css
+++ b/小程序模板/视频模板/videotemplate27/pages/index/index.css
@@ -389,8 +389,8 @@
     margin-left: 0.1rem;
 }
 .logo_view{
-    position: absolute;
+    /* position: absolute;
     top: 0.01rem;
-    left: 0.05rem;
+    left: 0.05rem; */
 
 }
