--- a/小程序模板/综合模板/complex1/pages/detail/detail.css
+++ b/小程序模板/综合模板/complex1/pages/detail/detail.css
@@ -105,13 +105,22 @@
 #text img {
     width: 100% !important;
 }
-
+.news_goods{
+    background-color: #6cb9e6;
+    color: #FFF;
+    text-align: center;
+    padding: 0.15rem 0 ;
+    border-radius: 0.05rem;
+}
+.red{
+    color: #f70709;
+}
 /* template */
 
-#myVideo {
+/* #myVideo {
     width: 100%;
 }
 
 #myVideo .wrap {
     padding-bottom: 0;
-}
+} */
