--- a/小程序模板/比分模板2.0/imgmobanrace2/pages/race/race.css
+++ b/小程序模板/比分模板2.0/imgmobanrace2/pages/race/race.css
@@ -120,6 +120,8 @@
 }
 
 .content_body2 {
+  display: flex;
+  align-items: center;
   font-size: 0.16rem;
 }
 .lname {
@@ -350,4 +352,11 @@
   margin: 0.05rem 0 0 0.05rem;
   color: #87CEFA;
   font-size: 0.18rem;
+}
+.news_iamge{
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 0.48rem;
+  height: 0.48rem;
 }
