--- a/小程序模板/比分模板2.0/imgmobanrace3/pages/race/race.css
+++ b/小程序模板/比分模板2.0/imgmobanrace3/pages/race/race.css
@@ -22,7 +22,7 @@
 }
 .content_today_view2{
   padding: 0.15rem 0;
-  margin: 0.5%;
+  margin: 1%;
   font-size: 0.15rem;
   background-color: #fff;
   width: 48%;
@@ -314,7 +314,9 @@
   height: 100%;
 }
 .preview{
-  width:1.9rem;
+  /* width:1.9rem;
+  height:1.2rem; */
+  width: 100%;
   height:1.2rem;
   margin: auto;
   border-radius: 0.1rem;
@@ -325,6 +327,7 @@
   align-items: center;
 }
 .preview_view{
+  width: 100%;
   position: relative;
   
 }
@@ -343,15 +346,18 @@
   align-items: center;
   position: absolute;
   top:0.9rem;
-  left:0.1rem;
+  left:0.05rem;
 }
 .hotCount{
-  color: #fff;
+  color: #f00;
+  font-weight: 600;
 }
 .hnameaname{
+  overflow: hidden;
   margin: 0.05rem 0 0 0.05rem;
   color: #87CEFA;
-  font-size: 0.18rem;
+  font-size: 0.16rem;
+  width: 1.8rem;
 }
 .news_iamge{
   position: absolute;
@@ -359,4 +365,10 @@
   top: 0;
   width: 0.48rem;
   height: 0.48rem;
+}
+.live_gameTimeFormat{
+  color: #fff;
+  position: absolute;
+  left: 0.1rem;
+  top: 0.05rem;
 }
