--- a/小程序模板/比分模板2.0/imgmobanrace1/pages/race/race.css
+++ b/小程序模板/比分模板2.0/imgmobanrace1/pages/race/race.css
@@ -118,7 +118,12 @@
 .content_body {
   background-color: #fff;
 }
-
+.content_today_view2:nth-child(2n+1) .content_body{
+  margin-left: 0.08rem;
+}
+.content_today_view3{
+  height: 0;
+}
 .content_body2 {
   font-size: 0.16rem;
 }
@@ -312,7 +317,7 @@
   height: 100%;
 }
 .preview{
-  width:1.9rem;
+  width:100%;
   height:1.2rem;
   margin: auto;
   border-radius: 0.1rem;
@@ -323,8 +328,8 @@
   align-items: center;
 }
 .preview_view{
+  width: 100%;
   position: relative;
-  
 }
 .play_image{
   position: absolute;
@@ -350,4 +355,6 @@
   margin: 0.05rem 0 0 0.05rem;
   color: #87CEFA;
   font-size: 0.18rem;
+  font-size: 0.16rem;
+  width: 1.8rem;
 }
