--- a/小程序模板/比分模板2.0/imgmobanrace5/pages/race/race.css
+++ b/小程序模板/比分模板2.0/imgmobanrace5/pages/race/race.css
@@ -148,7 +148,7 @@
   font-weight: 600;
 }
 .gameTimeFormat {
-  color: #747474;
+  color: #000;
   margin-left: 0.26rem;
 }
 
@@ -346,10 +346,10 @@
   align-items: center;
   position: absolute;
   top:0.9rem;
-  left:0.1rem;
+  left:0.03rem;
 }
 .hotCount{
-  color: #fff;
+  color: #f00;
 }
 .hnameaname{
   margin: 0.05rem 0 0 0.05rem;
