--- a/中转站/SMVIP/style/pc.css
+++ b/中转站/SMVIP/style/pc.css
@@ -1,1 +1,106 @@
-html{font-size:calc(100vw/9.6);}
+html {
+    font-size: calc(100vw/9.6);
+}
+
+.pc {
+    position: relative;
+}
+
+.bgimg {
+    width: 100%;
+}
+
+.image_div {
+    position: absolute;
+    width: 1.925rem;
+    height: 0.47rem;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    bottom: 0.29rem;
+}
+
+#shanmao {
+    background-image: url('../image/1.png');
+    left: 1.57rem;
+}
+
+#shanmao:hover {
+    background-image: url('../image/1点击.png');
+}
+
+#ledong {
+    background-image: url('../image/2.png');
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+#ledong:hover {
+    background-image: url('../image/2点击.png');
+}
+
+#youhui {
+    background-image: url('../image/3-2.png');
+    right: 1.57rem;
+}
+
+#youhui:hover {
+    background-image: url('../image/3点击.png');
+}
+
+#alert_box {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+    width: 100%;
+    height: 100%;
+    background: rgba(26, 29, 34, 0.7);
+}
+
+.alert_img {
+    position: absolute;
+    top: 1.075rem;
+    left: 2.57rem;
+    width: 4.5rem;
+    height: 3.11rem;
+}
+
+.img_box {
+    position: relative;
+}
+
+.kefu {
+    background-image: url('../image/客服.png');
+    position: absolute;
+    background-size: 100%;
+    width: 1.01rem;
+    height: 0.295rem;
+    top: 2.78rem;
+    left: 5.55rem;
+    
+}
+
+.kefu:hover {
+    background-image: url('../image/客服-点击.png');
+}
+
+.x {
+    position: absolute;
+    top: 1.07rem;
+    right: 2.595rem;
+    width: 0.255rem;
+    height: 0.255rem;
+}
+.x:hover{
+    transition-duration: 1s;
+    transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    /* IE 9 */
+    -moz-transform: rotate(180deg);
+    /* Firefox */
+    -webkit-transform: rotate(180deg);
+    /* Safari 和 Chrome */
+    -o-transform: rotate(180deg);
+    /* Opera */
+}
