--- a/小程序集合/草莓视频污/pages/index/index.css
+++ b/小程序集合/草莓视频污/pages/index/index.css
@@ -2,21 +2,7 @@
     margin: .2rem .57rem;
     display: flex;
 }
-.loading{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    position: fixed;
-    background:rgba(rgba(122, 121, 121, 0), rgb(93, 94, 93)gb(139, 139, 141), 0.9) ;
-    font-size: 0.21rem;
-    color: #000000;
-    font-weight: 600;
-    z-index: 100;
 
-}
 .rowlike view {
     flex: 1;
     text-align: center;
@@ -323,39 +309,62 @@
 
 /* videotemplate */
 .content_div{
-    margin-top: 0.1rem;
+    margin-top: 0.15rem;
 }
-.content{
-    width: 48%;
-}
-.content_div .content:nth-child(2n){
-    margin-left: 4%;
+.content_left{
+    position: relative;
+    width: 38%;
 }
 .content_image{
-    width: 100%;
-    height: 1.5rem;
     border-radius: 0.05rem;
+    width: 100%;
+    height: 1.3rem;
 }
-.goodnews_view{
+.content_right{
+    padding:2%;
+    width: 62%;
+}
+.logo1{
+    width: 0.6rem;
+    height: 0.15rem;
+}
+.news_time{
+    color: #747474;
+}
+.news_title{
+    margin: 0.1rem 0 ;
+    color:#000;
+    font-size: 0.19rem;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.news_goods{
     display: flex;
     align-items: center;
-    padding: 0.05rem 0 0.05rem 0.05rem;
+    margin-top: 0.1rem;
 }
+
 .goodnews{
-    margin-left: 0.05rem;
     width: 0.2rem;
     height: 0.2rem;
 }
-.image_view{
-    position: relative;
-}
 .player{
+    width: 0.32rem;
+    height: 0.32rem;
     position: absolute;
-    width: 0.3rem;
-    height: 0.3rem;
-    top: 0;
-    bottom: 0;
     left: 0;
     right: 0;
+    bottom: 0;
+    top: 0;
     margin: auto;
+}
+.share3{
+    margin-left: 1.5rem;
+    width: 0.2rem;
+    height: 0.2rem;
+}
+.content{
+    border: 0.02rem solid #4e89e1;
+    margin: 0.05rem 0;
+    padding: 0.1rem;
+    border-radius: 0.05rem;
 }
