--- a/小程序模板/比分模板2.0/imgmobanrace7/pages/index/index.css
+++ b/小程序模板/比分模板2.0/imgmobanrace7/pages/index/index.css
@@ -18,41 +18,6 @@
     flex-direction: column;
 }
 
-.balls_view {
-    position: fixed;
-    z-index: 100;
-    width: 100%;
-    height: 100%;
-}
-
-.balls {
-    position: absolute;
-    left: 45%;
-    top: 50%;
-    width: 3.5em;
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.balls view {
-    width: 0.8em;
-    height: 0.8em;
-    border-radius: 50%;
-    background-color: #fc2f70;
-    transform: translateY(-100%);
-    animation: wave 0.8s ease-in-out alternate infinite;
-}
-
-.balls view:nth-of-type(1) {
-    animation-delay: -0.4s;
-}
-
-.balls view:nth-of-type(2) {
-    animation-delay: -0.2s;
-}
-
 .collike view {
     height: 1.07rem;
     width: 2.5rem;
@@ -208,14 +173,15 @@
     padding: 0;
 }
 
-
-
 .con-img {
     width: 100%;
     height: 70%;
     /* float: left; */
 }
 
+.content_view image {
+    width: 100%;
+}
 
 .con-img image {
     width: 100%;
@@ -273,6 +239,25 @@
     color: #f70709;
 }
 
+.logodiv {
+    width: 100%;
+    height: 0.38rem;
+    display: flex;
+    align-items: center;
+}
+
+.logodiv1 {
+    width: 100%;
+    height: 0.38rem;
+    display: flex;
+    align-items: center;
+    color: #f70709;
+}
+
+.logoimages {
+    width: 0.39rem;
+    height: 100%;
+}
 
 .img2 {
     width: 0.79rem;
@@ -289,6 +274,10 @@
     padding: 0.1rem 0.1rem 0 0.1rem;
 }
 
+.centerimg {
+    display: flex;
+    align-items: center;
+}
 
 .changeNew {
     color: #4e89e1;
@@ -303,130 +292,93 @@
     padding: 0 0.05rem;
 }
 
-.span_view {
-    display: inline-block;
-}
+
 
 /* videotemplate */
-.content_div {
+.content .player_image{
+    position: absolute;
+    z-index: 100;
+    top: 0;
+    left: 17%;
+    bottom: 0;
+    margin: auto;
+    width: 0.32rem !important;
+    height: 0.32rem;
+}
+
+.content_span {
+    z-index: 100;
+    color: #f70709;
+    padding: 0.1rem 0.2rem;    
+}
+
+.content {
+    width: 100%;
+    position: relative;
+    margin-top: 0.1rem;
+    color: #f70709;
+}
+.content:nth-child(2n+1){
+    margin-left:2% ;
+}
+
+.content image {
+    width: 100%;
+    height: 1.12rem;
+}
+
+.content_div{
     margin-top: 0.15rem;
 }
 
-.content_left {
+.content_time{
+    position: absolute;
+    bottom: 0rem;
+    right: 0.2rem;
+    color: #f70709;
+}
+.image_view{
+    width: 35%;
+}
+
+.content_image{
+    width: 35%;
+}
+.content_image image{
+    width: 100%;
+    height: 0.9rem;
+}
+.content_view{
+    height: 1.1rem;
+    width: 95%;
+    padding: 0 2.5%;
+    border-bottom: 1px solid #666666;
+}
+.content_text{
+    width: 60%;
+    margin: 0 2.5%;
     position: relative;
 }
-
-.content_image {
-    width: 100%;
-    height: 1.3rem;
-    border-radius: 0.08rem;
-}
-
-.content_right {
-    padding: 2%;
-}
-
-.logo1 {
-    width: 0.6rem;
-    height: 0.15rem;
-}
-
-.news_time {
-    margin-left: 0.05rem;
-    color: #000;
-}
-
-.news_title {
-    margin: 0.1rem 0;
-    color: #fff;
-    font-size: 0.14rem;
+.content_news_title{
+    font-weight: 800;
+    font-size: 0.16rem;
+    color: #000000;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.content_text_view{
+    width: 100%;
     position: absolute;
-    bottom: 0;
-
+    top: -0.24rem;
 }
-
-.news_goods {
-    width: 1.8rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 0.1rem;
-}
-
-.disc {
-    display: flex;
-    align-items: center;
-}
-
-.disc1 {
-    width: 70%;
-   
-}
-.disc2{
-    width: 30%;
-}
-.goodnews {
-    width: 0.2rem;
-    height: 0.2rem;
-}
-.span_goods{
-    
+.content_text_span1{
     font-size: 0.14rem;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
+    color: #ff0000;
 }
-.player {
-    width: 0.32rem;
-    height: 0.32rem;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
-    margin: auto;
-}
-
-.share3 {
-    /* margin-left: 0.8rem; */
-    width: 0.2rem;
-    height: 0.2rem;
-}
-
-.content {
-    margin: 0.05rem 0;
-    padding: 0.05rem;
-    width: 50%;
-    border-radius: 0.05rem;
-}
-
-.logo {
-    width: 0.2rem;
-    height: 0.2rem;
-}
-
-.tuijian {
-    display: inline-block;
-    color: #4e89e1;
-    border: 0.01rem solid #4e89e1;
-    padding: 0.01rem 0.03rem;
-    border-radius: 0.05rem;
-    margin-left: 0.1rem;
-}
-
-.newimage {
-    width: 0.32rem;
-    height: 0.32rem;
-    position: absolute;
-    top: 0rem;
-    right: 0rem;
-    border-radius: 0.05rem;
+.content_text_span2{
+    font-size: 0.12rem;
+    color: #333333;
 }
